fixed z-index issue #79

--- a/dummies/less/styles.less
+++ b/dummies/less/styles.less
@@ -521,7 +521,7 @@ x:-o-prefocus, .qtip .qtip-tip{
 	display: inline-block;
 	//opacity: 0;
 	.transition(~"opacity .2s ease-in-out");
-	z-index: 14000;
+	z-index: 300;
 
 	// on item loaded
 	&[data-packery-item].loaded {
@@ -556,7 +556,7 @@ x:-o-prefocus, .qtip .qtip-tip{
 
 	// @todo: fix z-index delay on fade out
 	&.has-tooltip {
-		z-index: 16000;
+		z-index: 350;
 
 		&> div > a {
 			padding: @gravityItemBorder / @em;
@@ -1144,7 +1144,7 @@ body.editor-sidebar-open {
 	max-height: 100%;
 	background: @editorSidebarBg;
 	.transition(~"width @{editorSlideTransition} ease-in-out");
-	z-index: 1;
+	z-index: 500;
 
 
 	&:target,
@@ -2219,7 +2219,7 @@ body.dragover .editor-project-preview {
 	left: 50%;
 	width: @width;
 	margin-left: @width / -2;
-	z-index: 15000;
+	z-index: 400;
 
 	> section {
 		display: none;
